--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ body {
 
         .tecla-branca {
             border: 1px solid #000;
-            background: green;
+            background: #fff;
             width: 50px;
             height: 300px;
             border-radius: 0px 0px 5px 5px;
